fix unwrap

--- a/src/style/partials/kriya-science/ks-post-constructor-adaptive.scss
+++ b/src/style/partials/kriya-science/ks-post-constructor-adaptive.scss
@@ -1182,9 +1182,8 @@
 		//пофиксить
 	}
 
-	.reviews-unwrap {
-		//пофиксить
-
+	.kspc-simple-text--with-hide--show-9 .kspc-twpah-unwrap{
+		top: 105vw;
 	}
 }
 
@@ -1199,12 +1198,12 @@
 		top: 32.7vw;
 	}
 
-	.kspc-simple-text--with-hide--9 .kspc-twpah-unwrap {
-		//пофиксить
+
+	.kspc-simple-text--with-hide--show-9 .kspc-simple-text__p {
+		max-height: 106.33333vw;
+	}
+	.kspc-simple-text--with-hide--show-9 .kspc-twpah-unwrap{
+		top: 97.6vw;
 	}
 
-	.reviews-unwrap {
-		//пофиксить
-
-	}
 }
